--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <section class="about container">
       <h2 class="section-title">Добро пожаловать на мою страничку:)</h2>
-      <img class="about-image" src="img/lol.jpg" width="147" height="147" alt="Опознанный енот">
+      <img class="about-image" src="lol.jpg" width="147" height="147" alt="Опознанный енот">
       <div class="about-content">
         <p>Мне нужно тебе сообщить кое-что очень важное!</p>
         <p>Не знаю насколько сильно ты сейчас удивишься, но я написала этот сайт с одной единственной целью... </p>
@@ -27,9 +27,9 @@
     </section>
     <section class="status container">
       <h2 class="section-title">Моя любовь к тебе!</h2>
-      <td><img class="love-image" src="img/yu.jpg"></td>
-      <td><img class="love-image" src="img/er.jpg"></td>
-      <td><img class="love-image" src="img/we.jpg"></td>
+      <td><img class="love-image" src="yu.jpg"></td>
+      <td><img class="love-image" src="er.jpg"></td>
+      <td><img class="love-image" src="we.jpg"></td>
     </section>
     <section class="contacts container">
       <h2 class="section-title">Еще пару слов!</h2>
